finished resizing buttons and fixing alignment

--- a/src/AddSchool/AddSchool.css
+++ b/src/AddSchool/AddSchool.css
@@ -9,7 +9,7 @@
   border-radius: 5px;
   font-size: 1em;
   height: 6em;
-  width: 10em;
+  width: 8em;
   margin: 10px;
 }
 .submit-button:hover, .reset-button:hover {
