--- a/src/Main/Main.css
+++ b/src/Main/Main.css
@@ -24,7 +24,7 @@ margin-top: 5%;
   border-radius: 5px;
   font-size: 1em;
   height: 6em;
-  width: 10em;
+  width: 8em;
   
 }
 .add-button:hover {
