--- a/src/PlayerInfo/PlayerInfo.css
+++ b/src/PlayerInfo/PlayerInfo.css
@@ -8,8 +8,8 @@
   border: 0;
   border-radius: 5px;
   font-size: 1em;
-  height: 40px;
-  width: 60px;
+  height: 6em;
+  width: 8em;
   margin: 10px;
 }
 .delete-player:hover, .edit-player:hover {
@@ -22,6 +22,10 @@
   width: 20%;
 }
 .player {
+  display: flex;
+  justify-content: space-between;
+  text-align: left;
   columns: 2;
+  padding: 6% 10% 0;
 }
 }
