--- a/src/SchoolMain/SchoolMain.css
+++ b/src/SchoolMain/SchoolMain.css
@@ -4,7 +4,7 @@
    border-radius: 5px;
   font-size: 1em;
   height: 6em;
-  width: 10em;
+  width: 8em;
   margin: 10px;
 }
 .player-add:hover, .school-delete:hover {
